--- a/package.json
+++ b/package.json
@@ -16,14 +16,19 @@
     "@react-navigation/native-stack": "^6.9.18",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-native": "0.72.0",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-gifted-charts": "^1.4.7",
     "react-native-image-picker": "^7.1.0",
     "react-native-picker-select": "^9.0.1",
+    "react-native-pie-chart": "^3.0.2",
+    "react-native-progress": "^5.0.1",
     "react-native-progress-steps": "^1.3.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0"
   },
