--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-native-progress-steps": "^1.3.4",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-svg": "^14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0"
