--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.22.0",
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/netinfo": "^11.3.0",
     "@react-native-picker/picker": "^2.6.1",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.21",
     "@reduxjs/toolkit": "^2.2.0",
     "axios": "^1.6.7",
     "moment": "^2.30.1",
